início da ast
Co-authored-by: Rogério Medeiros <RogerioMSantos@users.noreply.github.com>